--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 @import 'components/header/nav.scss';
 @import 'components/cards/recipe-card.scss';
 @import 'components/carousel/carousel.scss';
+@import 'components/forms/forms.scss';
 @import 'components/forms/contact-form.scss';
 @import 'components/forms/login-form.scss';
 @import 'components/forms/recovery-form.scss';
