--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -24,8 +24,8 @@
             <input type="password" class="form-control" id="login-password" placeholder="Password">
         </div>
         <!-- Login button -->
-        <div class="form-group main-button">
-            <button type="button" name="button" class="btn login-btn" id="login-in-button">Login</button>
+        <div class="form-group">
+            <button type="button" name="button" class="btn main-button" id="login-in-button">Login</button>
         </div>
     </form>
     <!-- Additional links -->
