--- a/scss/base/main.scss
+++ b/scss/base/main.scss
@@ -18,6 +18,11 @@ body {
 h4 {
     color: $h4-color;
 }
+.flex-center {
+    display: flex;
+    justify-content: center;
+}
+
 
 .container{
     height: 100%;
