--- a/scss/components/forms/recovery-form.scss
+++ b/scss/components/forms/recovery-form.scss
@@ -1,9 +1,4 @@
-// userform box shadow
-.recovery-box-shadow {
-    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06);
-    -webkit-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06);
-    -moz-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06);
-}
+
 
 // main login form style
 .recovery-form {
@@ -18,44 +13,10 @@
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
-    background: $recovery-form-bg;
+    background: $form-bg;
     position: relative;
     flex-direction: column;
     padding: 10px;
-    @extend .recovery-box-shadow;
+    @extend .form-shadow;
     border-radius: 5px;
-}
-
-// recovery form title
-.recovery-form-title {
-    color: $recovery-form-title;
-}
-
-// userform fields
-.recovery-form-container {
-    margin-top: 0;
-}
-
-// recovery button
-.recovery-button {
-    margin-bottom: 0;
-}
-
-.recovery-btn {
-    width: 100%;
-    background: $recovery-button-bg;
-    color: $recovery-button-color;
-    border: 1px solid $recovery-button-border-color;
-
-    &:hover, &:focus {
-        background: $recovery-button-bg-hv;
-        color: $recovery-button-color-hv;
-        border: 1px solid $recovery-button-border-color-hv;
-    }
-}
-
-// recovery sample text
-.recovery-text {
-    font-size: 0.85rem;
-    padding: 1rem 0;
 }
