--- a/scss/components/forms/register-form.scss
+++ b/scss/components/forms/register-form.scss
@@ -1,10 +1,3 @@
-// userform box shadow
-.register-box-shadow {
-    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06);
-    -webkit-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06);
-    -moz-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06);
-}
-
 // main login form style
 .register-form {
     display: flex;
@@ -18,58 +11,10 @@
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
-    background: $register-form-bg;
+    background: $form-bg;
     position: relative;
     flex-direction: column;
     padding: 10px;
-    @extend .register-box-shadow;
+    @extend .form-shadow;
     border-radius: 5px;
-}
-
-// register form title
-.register-form-title {
-    color: $register-form-title;
-}
-
-// userform fields
-.register-form-container {
-    margin-top: 0;
-}
-
-// register button
-.register-button {
-    margin-bottom: 0;
-}
-
-.register-btn {
-    width: 100%;
-    background: $register-button-bg;
-    color: $register-button-color;
-    border: 1px solid $register-button-border-color;
-
-    &:hover,
-    &:focus {
-        background: $register-button-bg-hv;
-        color: $register-button-color-hv;
-        border: 1px solid $register-button-border-color-hv;
-    }
-}
-
-// cancel button
-.cancel-button {
-    padding-top: 10px;
-}
-
-.cancel-btn {
-    width: 100%;
-    background: $cancel-button-bg;
-    color: $cancel-button-color;
-    border: 1px solid $cancel-button-border-color;
-
-    &:hover,
-    &:focus {
-        background: $cancel-button-bg-hv;
-        color: $cancel-button-color-hv;
-        border: 1px solid $cancel-button-border-color-hv;
-    }
 }
