Main variables changed, commentary changed

--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -38,50 +38,33 @@ All user forms
 */
 /*! Userform input boxes font color */
 $input-box-color: #ABABAB;
-
-
-
-
-
-/*! 
-Forms
-*/
-/*! Login form background  */
+/*! Background color */
 $form-bg: #FFF;
-
-
-
-
+/*! Secondary title */
 $second-form-title:#FF3366;
-
-$login-form-circle-bg: #FF3366;
-
 /*! Login form recovery and sign-up links color */
 $recovery-text-color: #000;
 $sing-up-link-color: #FF3366;
 $forgot-link-color: #1DB0B5;
-
-
-
-
+/*! main button style */
 $main-button-bg: #FFF;
 $main-button-color: #FF3366;
 $main-button-border-color: #FF3366;
-
+/*! main button hover style */
 $main-button-bg-hv: #FF3366;
 $main-button-color-hv: #FFF;
 $main-button-border-color-hv: #FF3366;
-
-
+/*! second button style */
 $second-button-bg: #FFF;
 $second-button-color: #1DB0B5;
 $second-button-border-color: #1DB0B5;
-
+/*! second button hover style */
 $second-button-bg-hv: #1DB0B5;
 $second-button-color-hv: #FFF;
 $second-button-border-color-hv: #1DB0B5;
 
-
+/*! Login form fancy circle background color */
+$login-form-circle-bg: #FF3366;
 
 
 /*! 
