--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,11 +18,14 @@ Footer
 All user forms
 */
 /*! Userform input boxes font color */
-/*! 
-Forms
-*/
-/*! Login form background  */
+/*! Background color */
+/*! Secondary title */
 /*! Login form recovery and sign-up links color */
+/*! main button style */
+/*! main button hover style */
+/*! second button style */
+/*! second button hover style */
+/*! Login form fancy circle background color */
 /*! 
 Contact Page
 */
