--- a/scss/components/forms/login-form.scss
+++ b/scss/components/forms/login-form.scss
@@ -1,3 +1,10 @@
+.login-form {
+    display: flex;
+    justify-content: center;
+    padding-top: 150px;
+    padding-bottom: 10px;
+}
+
 .login-form-container {
     height: auto;
     width: 350px;
