--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -1,40 +1,42 @@
 <!-- Main login form container -->
-<div class="login-form-container">
-    <!-- Cricle logo container -->
-    <div class="flex-center">
-        <div class="half-circle"></div>
-        <div class="brand-logo-container">
-            <img src="/static/images/logotype/login-logo.png" class="brand-logo" alt="Logo">
+<div class="login-form">
+    <div class="login-form-container">
+        <!-- Cricle logo container -->
+        <div class="flex-center">
+            <div class="half-circle"></div>
+            <div class="brand-logo-container">
+                <img src="/static/images/logotype/login-logo.png" class="brand-logo" alt="Logo">
+            </div>
         </div>
-    </div>
-    <!-- Form -->
-    <form id="login-form" name="login-form" method="POST">
-        <!-- Second title -->
-        <div class="form-group">
-            <h3 class="form-second-title">Login</h3>
-        </div>
-        <!-- Email box -->
-        <div class="form-group">
-            <label>Email address</label>
-            <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Enter email">
-        </div>
-        <!-- Password input box -->
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" id="login-password" placeholder="Password">
-        </div>
-        <!-- Login button -->
-        <div class="form-group">
-            <button type="button" name="button" class="btn main-button" id="login-in-button">Login</button>
-        </div>
-    </form>
-    <!-- Additional links -->
-    <div class="login-additional-links">
-        <div class="sign-up">
-            Don't have an account? <a href="{{url_for('register')}}" class="sign-up-link">Sign Up</a>
-        </div>
-        <div>
-            <a href="{{url_for('recovery')}}" class="forgot-password">Forgot your password?</a>
+        <!-- Form -->
+        <form id="login-form" name="login-form" method="POST">
+            <!-- Second title -->
+            <div class="form-group">
+                <h3 class="form-second-title">Login</h3>
+            </div>
+            <!-- Email box -->
+            <div class="form-group">
+                <label>Email address</label>
+                <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Enter email">
+            </div>
+            <!-- Password input box -->
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password" class="form-control" id="login-password" placeholder="Password">
+            </div>
+            <!-- Login button -->
+            <div class="form-group">
+                <button type="button" name="button" class="btn main-button" id="login-in-button">Login</button>
+            </div>
+        </form>
+        <!-- Additional links -->
+        <div class="login-additional-links">
+            <div class="sign-up">
+                Don't have an account? <a href="{{url_for('register')}}" class="sign-up-link">Sign Up</a>
+            </div>
+            <div>
+                <a href="{{url_for('recovery')}}" class="forgot-password">Forgot your password?</a>
+            </div>
         </div>
     </div>
 </div>
