--- a/scss/components/forms/forms.scss
+++ b/scss/components/forms/forms.scss
@@ -1,3 +1,9 @@
+.form-flex {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+}
+
 .form-second-title {
     color: $second-form-title;
 }
