Login-form class chnaged

--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -1,5 +1,5 @@
 <!-- Main login form container -->
-<div class="login-form">
+<div class="login-form form-flex">
     <div class="login-form-container">
         <!-- Cricle logo container -->
         <div class="flex-center">
