--- a/templates/components/forms/register-form.html
+++ b/templates/components/forms/register-form.html
@@ -1,42 +1,38 @@
 <!-- Main login container -->
 <h2 class="hidden">Register Form</h2>
-<div class="register-form">
-    <div class="register-user-form">
-        <!-- Form container -->
-        <div class="register-form-container">
-            <!-- Form -->
-            <form id="register-form" name="register-form" method="POST">
-                <!-- Register form title -->
-                <div class="form-group">
-                    <h3 class="register-form-title">Register</h3>
-                </div>
-                <!-- Name input box -->
-                <div class="form-group">
-                    <label>Name</label>
-                    <input type="name" class="form-control" id="register-name" aria-describedby="nameHelp" placeholder="Enter Name">
-                </div>
-                <!-- Email input box -->
-                <div class="form-group">
-                    <label>Email address</label>
-                    <input type="email" class="form-control" id="register-email" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                </div>
-                <!-- Password input box -->
-                <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" class="form-control" id="register-password" placeholder="Password">
-                </div>
-                <!-- Register button -->
-                <div class="form-group register-button">
-                    <button type="button" name="button" class="btn register-btn" id="register-button">Register</button>
-                </div>
-                <!-- Cancel button -->
-                <div class="form-group cancel-button">
-                    <a href="{{url_for('login')}}">
-                        <button type="button" name="button" class="btn cancel-btn" id="register-cancel-button">Cancel</button>
+<div class="register-form form-flex">
+    <div class="register-form-container">
+        <!-- Form -->
+        <form id="register-form" name="register-form" method="POST">
+            <!-- Register form title -->
+            <div class="form-group">
+                <h3 class="form-second-title">Register</h3>
+            </div>
+            <!-- Name input box -->
+            <div class="form-group">
+                <label>Name</label>
+                <input type="name" class="form-control" id="register-name" aria-describedby="nameHelp" placeholder="Enter Name">
+            </div>
+            <!-- Email input box -->
+            <div class="form-group">
+                <label>Email address</label>
+                <input type="email" class="form-control" id="register-email" aria-describedby="emailHelp" placeholder="Enter email">
+            </div>
+            <!-- Password input box -->
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password" class="form-control" id="register-password" placeholder="Password">
+            </div>
+            <!-- Register button -->
+            <div class="form-group">
+                <button type="button" name="button" class="btn main-button" id="register-button">Register</button>
+            </div>
+            <!-- Cancel button -->
+            <div class="form-group">
+                <a href="{{url_for('login')}}">
+                        <button type="button" name="button" class="btn second-button" id="register-cancel-button">Cancel</button>
                     </a>
-                </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
 </div>
