Recovery form remake finsihed

--- a/scss/components/forms/recovery-form.scss
+++ b/scss/components/forms/recovery-form.scss
@@ -1,15 +1,9 @@
-
-
-// main login form style
 .recovery-form {
-    display: flex;
-    justify-content: center;
     padding-top: 110px;
-    padding-bottom: 10px;
 }
 
 .recovery-user-form {
-    height: 400px;
+    height: auto;
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
