Form paragraph style added

--- a/templates/components/forms/recovery-form.html
+++ b/templates/components/forms/recovery-form.html
@@ -1,13 +1,13 @@
 <!-- Main login container -->
 <h2 class="hidden">Recovery Form</h2>
-<div class="recovery-form flex-form">
+<div class="recovery-form form-flex">
     <div class="recovery-user-form">
         <!-- Form container -->
         <form id="recovery-form" name="recovery-form" method="POST">
             <!-- Register form title -->
             <div class="form-group">
-                <h3 class="form-second-title ">Password recovery</h3>
-                <p class="recovery-text">Forgot your password ? Don't worry, simply type your email address and we will send you your password back.</p>
+                <h3 class="form-second-title">Password recovery</h3>
+                <p>Forgot your password ? Don't worry, simply type your email address and we will send you your password back.</p>
             </div>
             <!-- Email input box -->
             <div class="form-group">
