--- a/templates/components/forms/contact-form.html
+++ b/templates/components/forms/contact-form.html
@@ -6,7 +6,7 @@
         <form id="contact-form" name="contact-form" method="POST">
             <!-- Register form title -->
             <div class="form-group">
-                <h3 class="contact-form-title">Send us a Message</h3>
+                <h3 class="form-second-title">Send us a Message</h3>
                 <p class="contact-text">Feel free to contact us. We will try to get back to you ASAP but.., you know COVID-19 also attacked our servers.. hehe. We're here for you 24h/6 days a week.</p>
             </div>
             <!-- Name input box -->
