--- a/scss/components/forms/contact-form.scss
+++ b/scss/components/forms/contact-form.scss
@@ -1,10 +1,3 @@
-// userform box shadow
-.contact-box-shadow {
-    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06);
-    -webkit-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06);
-    -moz-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06);
-}
-
 // main login form style
 .contact-form {
     display: flex;
@@ -26,25 +19,13 @@
     width: 600px;
     margin-top: auto;
     margin-bottom: auto;
-    background: $contact-form-bg;
+    background: $form-bg;
     position: relative;
     flex-direction: column;
-    @extend .contact-box-shadow;
+    @extend .form-shadow;
     border-radius: 5px;
+    
 }
-
-// form title
-.contact-form-title {
-    color: $contact-form-title;
-}
-
-// p text
-.contact-text {
-    font-size: 0.85rem;
-    padding-bottom: 1rem;
-}
-
-
 // userform fields
 .contact-form-container {
     margin-top: 0;
@@ -53,35 +34,4 @@
 .contact-form-buttons {
     display: flex;
     justify-content: space-between;
-}
-
-.send-btn {
-    width: 100px;
-    flex-direction: flex-end;
-    background: $send-button-bg;
-    color: $send-button-color;
-    border: 1px solid $send-button-border-color;
-    order: 2;
-
-    &:hover,
-    &:focus {
-        background: $send-button-bg-hv;
-        color: $send-button-color-hv;
-        border: 1px solid $send-button-border-color-hv;
-    }
-}
-
-.clear-form-btn {
-    width: 100px;
-    background: $clear-form-button-bg;
-    color: $clear-form-button-color;
-    border: 1px solid $clear-form-button-border-color;
-    order: 1;
-
-    &:hover,
-    &:focus {
-        background: $clear-form-button-bg-hv;
-        color: $clear-form-button-color-hv;
-        border: 1px solid $clear-form-button-border-color-hv;
-    }
 }
