Recovery form text and style change

--- a/templates/components/forms/recovery-form.html
+++ b/templates/components/forms/recovery-form.html
@@ -7,7 +7,7 @@
             <!-- Register form title -->
             <div class="form-group">
                 <h3 class="form-second-title">Password recovery</h3>
-                <p>Forgot your password ? Don't worry, simply type your email address and we will send you your password back.</p>
+                <p>Forgot your password ? <br> Don't worry, simply type your email address and we will send your password back.</p>
             </div>
             <!-- Email input box -->
             <div class="form-group">
