Motivation text added to form

--- a/templates/components/forms/register-form.html
+++ b/templates/components/forms/register-form.html
@@ -7,6 +7,8 @@
             <!-- Register form title -->
             <div class="form-group">
                 <h3 class="form-second-title">Register</h3>
+                <p>You are making your first step to become a Baking Master!</p>
+
             </div>
             <!-- Name input box -->
             <div class="form-group">
