--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -1,6 +1,6 @@
 <!-- Main login form container -->
 <div class="login-form form-flex">
-    <div class="login-form-container">
+    <div class="main-form-container">
         <!-- Cricle logo container -->
         <div class="flex-center">
             <div class="half-circle"></div>
