--- a/templates/components/forms/recovery-form.html
+++ b/templates/components/forms/recovery-form.html
@@ -1,7 +1,7 @@
 <!-- Main login container -->
 <h2 class="hidden">Recovery Form</h2>
 <div class="recovery-form form-flex">
-    <div class="recovery-user-form">
+    <div class="main-form-container">
         <!-- Form container -->
         <form id="recovery-form" name="recovery-form" method="POST">
             <!-- Register form title -->
