--- a/templates/components/forms/register-form.html
+++ b/templates/components/forms/register-form.html
@@ -1,7 +1,7 @@
 <!-- Main login container -->
 <h2 class="hidden">Register Form</h2>
 <div class="register-form form-flex">
-    <div class="register-form-container">
+    <div class="main-form-container">
         <!-- Form -->
         <form id="register-form" name="register-form" method="POST">
             <!-- Register form title -->
