--- a/scss/components/forms/contact-form.scss
+++ b/scss/components/forms/contact-form.scss
@@ -1,34 +1,10 @@
 // main login form style
 .contact-form {
-    display: flex;
-    justify-content: center;
-    padding-top: 100px;
-    padding-bottom: 10px;
-
-    .form-container {
-        margin: 0 !important;
-    }
-    
-    form {
-        padding: 1rem;
-    }
+    padding-top: 150px;
 }
 
-.contact-user-form {
-    height: auto;
+.main-form-container {
     width: 600px;
-    margin-top: auto;
-    margin-bottom: auto;
-    background: $form-bg;
-    position: relative;
-    flex-direction: column;
-    @extend .form-shadow;
-    border-radius: 5px;
-    
-}
-// userform fields
-.contact-form-container {
-    margin-top: 0;
 }
 
 .contact-form-buttons {
