--- a/scss/components/forms/login-form.scss
+++ b/scss/components/forms/login-form.scss
@@ -2,17 +2,8 @@
     padding-top: 150px;
 }
 
-.login-form-container {
-    height: auto;
+.main-form-container {
     width: 350px;
-    margin-top: auto;
-    margin-bottom: auto;
-    background: $form-bg;
-    position: relative;
-    flex-direction: column;
-    @extend .form-shadow;
-    border-radius: 5px;
-    padding: 2rem 1rem;
     
     form {
         margin-top: 40px;
