--- a/scss/components/footer/footer.scss
+++ b/scss/components/footer/footer.scss
@@ -13,6 +13,7 @@
 .colored-footer {
     background-color: $footer-bg;
     margin-bottom: 20px;
+    padding: 1rem 2rem;
 }
 
 // about comapny section
