Button type changed from button to submit. Required added to form fields

--- a/templates/components/forms/recovery-form.html
+++ b/templates/components/forms/recovery-form.html
@@ -12,11 +12,11 @@
             <!-- Email input box -->
             <div class="form-group">
                 <label>Email address</label>
-                <input type="email" class="form-control" id="recovery-email" aria-describedby="emailHelp" placeholder="Enter email">
+                <input type="email" class="form-control" id="recovery-email" aria-describedby="emailHelp" placeholder="Enter email" required>
             </div>
             <!-- Register button -->
             <div class="form-group">
-                <button type="button" name="button" class="btn main-button" id="recovery-button">Recover</button>
+                <button type="submit" name="button" class="btn main-button" id="recovery-button">Recover</button>
             </div>
             <!-- Cancel button -->
             <div class="form-group">
