--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -17,16 +17,16 @@
             <!-- Email box -->
             <div class="form-group">
                 <label>Email address</label>
-                <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Enter email">
+                <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Enter email" required>
             </div>
             <!-- Password input box -->
             <div class="form-group">
                 <label>Password</label>
-                <input type="password" class="form-control" id="login-password" placeholder="Password">
+                <input type="password" class="form-control" id="login-password" placeholder="Password" required>
             </div>
             <!-- Login button -->
             <div class="form-group">
-                <button type="button" name="button" class="btn main-button" id="login-in-button">Login</button>
+                <button type="submit" name="button" class="btn main-button" id="login-in-button">Login</button>
             </div>
         </form>
         <!-- Additional links -->
