--- a/templates/components/forms/register-form.html
+++ b/templates/components/forms/register-form.html
@@ -11,23 +11,23 @@
 
             </div>
             <!-- Name input box -->
-            <div class="form-group">
-                <label>Name</label>
-                <input type="name" class="form-control" id="register-name" aria-describedby="nameHelp" placeholder="Enter Name" required>
+            <div class="form-group" >
+                <label for="name">Name</label>
+                <input type="name" class="form-control" name="name" aria-describedby="nameHelp" placeholder="Enter Name" required>
             </div>
             <!-- Email input box -->
             <div class="form-group">
-                <label>Email address</label>
-                <input type="email" class="form-control" id="register-email" aria-describedby="emailHelp" placeholder="Enter email" required>
+                <label for="email">Email address</label>
+                <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email" required>
             </div>
             <!-- Password input box -->
             <div class="form-group">
-                <label>Password</label>
-                <input type="password" class="form-control" id="register-password" placeholder="Password" required>
+                <label for="password">Password</label>
+                <input type="password" class="form-control" name="password" placeholder="Password" required>
             </div>
             <!-- Register button -->
             <div class="form-group">
-                <button type="submit" name="button" class="btn main-button" id="register-button">Register</button>
+                <button type="submit" name="button" class="btn main-button">Register</button>
             </div>
             <!-- Cancel button -->
             <div class="form-group">
