Forms error and pass messasge style added

--- a/scss/components/forms/forms.scss
+++ b/scss/components/forms/forms.scss
@@ -71,3 +71,29 @@ form {
     border-color: #CCC;
     outline: none !important;
 }
+
+.form-error-message {
+    height: 38px;
+    width: 100%;
+    border: 1px solid #FF3366;
+    background-color: rgba(255, 172, 193, 0.6);
+    border-radius: 5px;
+    text-align: center;
+
+    p {
+        padding: 0.5rem;
+        font-size: 0.85rem;
+        font-weight: 400;
+        color: #FF3366;
+    }
+}
+
+.form-pass-message {
+    @extend .form-error-message;
+    border: 1px solid #5aac17;
+    background-color: rgba(230, 255, 204, 0.6);
+
+    p {
+        color: #5aac17;
+    }
+}
